Aligned video vertically. Fixed parallax to work with multiple images.

--- a/src/less/modules/video.less
+++ b/src/less/modules/video.less
@@ -7,13 +7,14 @@
 
   .full-width-video {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
     width: 100%;
     transform: none;
     opacity: if((@video-overlay), 1 - @video-overlay-opacity, 1);
-
-    .atLarge({
-      transform: translateY(@video-translate);
-    });
   }
 
 
