--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -37,11 +37,11 @@
 
 /* Video */
 
-@video-container-height: 50vh;
+@video-container-height: 80vh;
 @video-translate: -30%;
 @video-overlay: true;
 @video-overlay-color: black;
-@video-overlay-opacity: 0.4;
+@video-overlay-opacity: 0.5;
 
 
 
